--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
                 <h1>Este es el título atractivo e interesante
                     del post</h1>
                 <p>Y este es el parrafo de inicio donde
-                        vanis a exolicar las cosas increibles
+                        vamos a explicar las cosas increibles
                         que se pueden hacer con ramas</p>
                  <p>Los blogs son la mejor 
                             forma de compartir
