Una version de el curso

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido al git-curso</title>
+        <title>Bienvenido al git-curso 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
